[package]
name = "rust-redis-clone"
version = "0.1.0"
edition = "2021"

[lib]
name = "redis_clone"
path = "src/lib.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
toml = "0.5"
threadpool = "1.8"
uuid = { version = "1.2", features = ["v4"] }
serde_json = "1.0"
criterion = "0.3"

[[bench]]
name = "redis_benchmark"
harness = false