[package]
name = "rust-redis-imitate"
version = "0.1.0"
edition = "2021"
description = "A Redis-like in-memory cache implementation in Rust"
license = "MIT"
repository = "https://github.com/Erio-Harrison/rust-redis-imitate"
keywords = ["redis", "cache", "database", "memory-cache"]
categories = ["database", "caching"]

[lib]
name = "redis_imitate"
path = "src/lib.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
toml = "0.5"
threadpool = "1.8"
uuid = { version = "1.2", features = ["v4"] }
serde_json = "1.0"

[dev-dependencies]
criterion = { version = "0.3", features = ["html_reports"] }

[[bench]]
name = "redis_benchmark"
harness = false
