[package]
name = "rust-redis-imitate"
version = "0.1.0"
edition = "2021"
description = "A Redis-like in-memory cache implementation in Rust"
license = "MIT"
repository = "https://github.com/Erio-Harrison/rust-redis-imitate"
keywords = ["redis", "cache", "database", "memory-cache"]
categories = ["database", "caching"]

[lib]
name = "redis_imitate"
path = "src/lib.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
parking_lot = "0.12"
toml = "0.5"
threadpool = "1.8"
uuid = { version = "1.2", features = ["v4"] }
serde_json = "1.0"
thiserror = "1.0"
bincode = "1.3" 
rand = "0.8"

[dev-dependencies]
criterion = { version = "0.3", features = ["html_reports"] }

[[bench]]
name = "redis_benchmark"
harness = false
